--- a/pug/index.pug
+++ b/pug/index.pug
@@ -7,8 +7,8 @@ block header
   p Witaj na stronie Invetta
   h1
     | Proinnowacyjna integracja przedsiębiorstw ze sektorem badawczo-rozwojowym
-  a.i-btn(href='#o-nas')
-    | Poznaj nas
+  a.i-btn(href='#oferta')
+    | Poznaj ofertę
     img(src='images/icons/white-arrow-right.png')
 
 block content
@@ -44,35 +44,27 @@ block content
             li
               span(onclick='goToSlide(0);') Biznes
             li
-              span(onclick='goToSlide(1);') Finanse
+              span(onclick='goToSlide(1);') Ośrodki naukowo - badawcze
             li
-              span(onclick='goToSlide(2);') Audyt technologiczny
+              span(onclick='goToSlide(2);') Samorządy
             li
-              span(onclick='goToSlide(3);') Innowacje
+              span(onclick='goToSlide(3);') Dział technologiczny
             li
-              span(onclick='goToSlide(4);') Mentoring wdrożeniowy
-            li
-              span(onclick='goToSlide(5);') Ośrodki naukowo - badawcze
-            li
-              span(onclick='goToSlide(6);') Jednostki samorządu terytorialnego
+              span(onclick='goToSlide(4);') Dział finansowania i prowadzenia projektów
         .col.s6.valign.center-align
           #i-offer-slider
             p
               | Pomagamy wyznaczyć nowe kierunki rozwoju, zwiększać zyskowność oraz
               | optymalizować procesy zachodzące wewnątrz firmy.
             p
-              | *** TODO: Finanse ***
+              | *** TODO: Osrodki badawczo-naukowe ***
             p
-              | *** TODO: Audyt technologiczny ***
+              | *** TODO: Samorzady ***
             p
-              | *** TODO: Innowacje ***
+              | *** TODO: Dzial technologiczny ***
             p
-              | *** TODO: Mentoring wdrożeniowy ***
-            p
-              | *** TODO: Ośrodki naukowo - badawcze ***
-            p
-              | *** TODO: Jednostki samorządu terytorialnego ***
-      .row
+              | *** TODO: Dzial finansowania i prowadzenia projektow ***
+      .row.i-slider-dots-row
         .col.s12.center-align
           div(style='position: relative')
             #i-offer-slider-dots
