--- a/pug/layout.pug
+++ b/pug/layout.pug
@@ -11,7 +11,7 @@ html
       .container
         .row
           .col.s12.center-align
-            a(href='/')
+            a(href='index.html')
               img.i-logo(src='images/logos/invetta.png')
             include partials/menu.pug
         .row
@@ -19,7 +19,6 @@ html
             block header
 
     block content
-    include partials/partnerzy.pug
     include partials/kontakt.pug
     include partials/footer.pug
     include partials/scripts.pug
