--- a/pug/partials/footer.pug
+++ b/pug/partials/footer.pug
@@ -22,5 +22,5 @@
           .i-company-detail KRS: 0000540204
     .row.i-last-row
       .col.s12
-        a(href='/')
+        a(href='index.html')
           img.i-logo(src='images/logos/invetta.png')
