--- a/pug/partials/menu.pug
+++ b/pug/partials/menu.pug
@@ -18,6 +18,16 @@ ul.i-menu
           span.i-arrow
           | Samorządy
   li
-    a(href='zespol-ekspercki.html') Zespół ekspercki
+    a(href='#') Zespół ekspercki
+    img(src='images/icons/black-dropdown.png')
+    ul.i-dropdown
+      li
+        a(href='dzial-technologiczny.html')
+          span.i-arrow
+          | Dział technologiczny
+      li
+        a(href='dzial-finansowania-i-prowadzenia-projektow.html')
+          span.i-arrow
+          | Dział Finansowania i Prowadzenia Projektów
   li
     a(href='#kontakt') Kontakt
