--- a/pug/dzial-finansowania-i-prowadzenia-projektow.pug
+++ b/pug/dzial-finansowania-i-prowadzenia-projektow.pug
@@ -1,37 +1,13 @@
 extends layout.pug
 
 block header
-  h1.jumbo Zespół ekspercki
+  h1.small Finansowanie i prowadzenie projektów
 
 block content
   .i-sheet.i-light
     .container
       .row
-        .col.s12
-          ul.section-links
-            li
-              a(href='#dzial-technologiczny') Dział technologiczny
-            li
-              a(href='#dzial-finansowania-i-prowadzenia-projektow') Dział finansowania i prowadzenia projektów
-      .row
         .col.s12.m10.offset-m1
-          a(name='dzial-technologiczny')
-          h2 Dział technologiczny
-          p
-            | Ze względu na szeroki zakres realizacji projektów nasi eksperci dziedzinowi wywodzą się  z wiodących ośrodków naukowych w Polsce. Wśród nich jest m.in. Polska Akademia Nauk, uczelnie techniczne takie jak: Politechnika Warszawska, Politechnika Rzeszowska, Politechnika Wrocławska, Politechnika Łódzka, Wojskowa Akademia Techniczna, Akademia Górniczo‐Hutnicza w Krakowie, uniwersytety i akademie oraz instytuty badawcze np. Uniwersytet Warszawski, Uniwersytet Kardynała Stefana Wyszyńskiego, Akademia Leona Koźmińskiego, Instytut Automatyki i Informatyki Stosowanej. Do grona naszych ekspertów należą ponadto osoby mające wieloletnie doświadczenie przy wdrażaniu projektów innowacyjnych. Dzięki temu nasz zespół jest w stanie zrealizować złożone projekty wymagające zaawansowanej wiedzy eksperckiej gwarantującej wysoki poziom realizacji m.in.:
-
-            ul
-              li audytów innowacyjności
-              li
-                | planowania, modelowania i opracowywania strategii wdrażania innowacji i ich promocji  w kraju oraz za granicą
-              li analiz wariantów rozwoju firmy w oparciu o wdrożenie innowacji
-              li analiz finansowych wdrożenia innowacji
-              li doradztwa prawnego, w tym opracowania/konsultacji umów
-              li doradztwa w dziedzinie własności intelektualnej
-              li wnioskowania o dofinansowanie innowacyjnych inwestycji
-
-          a(name='dzial-finansowania-i-prowadzenia-projektow')
-          h2 Dział finansowania i prowadzenia projektów
           p
             | Nasz zespół tworzą certyfikowani doradcy (IPMA, PMI, PRINCE2) w zakresie zarządzania projektami, pozyskiwania oraz rozliczania środków z dotacji unijnych dla podmiotów gospodarczych, naukowych oraz jednostek sektora finansów publicznych. Dysponujemy doświadczeniem zdobytym przy opracowywaniu oraz koordynacji ponad kilkuset projektów finansowanych ze środków UE oraz dotacji krajowych, których wartość plasuje się od kilku do kilkuset milionów złotych.
           p
