--- a/pug/osrodki-naukowo-badawcze.pug
+++ b/pug/osrodki-naukowo-badawcze.pug
@@ -1,7 +1,7 @@
 extends layout.pug
 
 block header
-  h1.jumbo Ośrodki naukowo-badawcze
+  h1.small Ośrodki naukowo-badawcze
 
 block content
   .i-sheet.i-light
