--- a/pug/index.pug
+++ b/pug/index.pug
@@ -40,17 +40,17 @@ block content
     .container
       .row.i-content-space.valign-wrapper
         .col.s6
-          ul.i-topic-list
+          ul.i-topic-list#i-offer-slider-list
             li
-              span(onclick='goToSlide(0);') Biznes
+              span.active Biznes
             li
-              span(onclick='goToSlide(1);') Ośrodki naukowo - badawcze
+              span Ośrodki naukowo - badawcze
             li
-              span(onclick='goToSlide(2);') Samorządy
+              span Samorządy
             li
-              span(onclick='goToSlide(3);') Dział technologiczny
+              span Dział technologiczny
             li
-              span(onclick='goToSlide(4);') Dział finansowania i prowadzenia projektów
+              span Dział finansowania i prowadzenia projektów
         .col.s6.valign.center-align
           #i-offer-slider
             p
