--- a/pug/partials/kontakt.pug
+++ b/pug/partials/kontakt.pug
@@ -1,9 +1,9 @@
 // Kontakt
 a(name='kontakt')
-.i-content.i-bg-letter-blue
+.i-content.i-bg-letter.i-bg-white
   .container
     .row.i-content-space-small
-      .col.s5.offset-s7.i-dark.center-align
+      .col.s5.offset-s7.i-light.center-align.i-col-form
         h3 Napisz do nas
         h2 Formularz kontaktowy
         form
