--- a/scss/invetta/_variables.scss
+++ b/scss/invetta/_variables.scss
@@ -8,5 +8,6 @@ $light-gray: #a6b0b5;
 $navy-blue: #023866;
 $dark-navy-blue: #032949;
 $darker-navy-blue: #013052;
+$darkest-navy-blue: #02345f;
 $lighter-navy-blue: #045c93;
 $light-navy-blue: #3e678a;
