smaller letter image

--- a/css/main.css
+++ b/css/main.css
@@ -5751,7 +5751,7 @@ form {
       color: #757575; }
 
 .i-bg-letter {
-  background-image: url("../images/various/letter.png");
+  background-image: url("../images/various/letter.jpg");
   background-size: 50% auto;
   background-position: 0% 50%;
   background-repeat: no-repeat; }
