--- a/scss/main.scss
+++ b/scss/main.scss
@@ -438,7 +438,7 @@ form {
 }
 
 .i-bg-letter {
-  background-image: url('../images/various/letter.png');
+  background-image: url('../images/various/letter.jpg');
   background-size: 50% auto;
   background-position: 0% 50%;
   background-repeat: no-repeat;
