--- a/pug/index.pug
+++ b/pug/index.pug
@@ -6,7 +6,7 @@ block top
 block header
   p Witaj na stronie Invetta
   h1
-    | Proinnowacyjna integracja przedsiębiorstw ze sektorem badawczo-rozwojowym
+    | Proinnowacyjna integracja przedsiębiorstw z sektorem badawczo-rozwojowym
   a.i-btn(href='#oferta')
     | Poznaj ofertę
     img(src='images/icons/white-arrow-right.png')
