"firma"/"przedsiebiorstwo" -> "organizacja"

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,9 +4,9 @@ block top
   - var main = true
 
 block header
-  p Witaj na stronie Invetta
+  p Rozwój przez innowacje
   h1
-    | Proinnowacyjna integracja przedsiębiorstw z sektorem badawczo-rozwojowym
+    | Proinnowacyjna integracja organizacji z sektorem badawczo-rozwojowym
   a.i-btn(href='#oferta')
     | Poznaj ofertę
     img(src='images/icons/white-arrow-right.png')
@@ -20,7 +20,7 @@ block content
         h2.first-header O nas
         h3 Na czym polega nasza działalność?
         p
-          | Invetta Sp. z o.o. powstała z misją wspierania naszych klientów w proinnowacyjnej integracji przedsiębiorstw z sektorem badawczo-rozwojowym oraz ułatwieniu prac rozwojowych. Swoją wiedzą i doświadczeniem wspomagamy przedsiębiorców, aby mogli rozwijać swój biznes i skutecznie konkurować z innymi podmiotami na rynku.
+          | Invetta Sp. z o.o. powstała z misją wspierania naszych klientów w proinnowacyjnej integracji organizacji z sektorem badawczo-rozwojowym oraz ułatwieniu prac rozwojowych. Swoją wiedzą i doświadczeniem wspomagamy przedsiębiorców, aby mogli rozwijać swój biznes i skutecznie konkurować z innymi podmiotami na rynku.
         a.i-btn(href='o-nas.html')
           | WIĘCEJ
           img(src='images/icons/blue-arrow-right.png')
