--- a/pug/samorzady.pug
+++ b/pug/samorzady.pug
@@ -9,11 +9,11 @@ block content
       .row
         .col.s12.m10.offset-m1
           p
-            | Invetta Sp. z o.o. pomaga Jednostkom Samorządu Terytorialnego pozyskać wsparcie m.in. z programów krajowych oraz regionalnych, w ramach pomocy strukturalnej UE, funduszy krajowych Narodowego Centrum Badań i Rozwoju, Narodowego Funduszu Ochrony Środowiska i Gospodarki Wodnej. Wspieramy Klientów we wszystkich etapach pozyskiwania dotacji, począwszy od rozpoznania potrzeb inwestycyjnych i napisania wniosku o dofinansowanie oraz dokumentacji aplikacyjnej, po rozliczenie poszczególnych etapów projektu, aż do formalnego zakończenia realizacji inwestycji
+            | Invetta Sp. z o.o. pomaga jednostkom samorządu terytorialnego pozyskać wsparcie m.in. z programów krajowych oraz regionalnych, w ramach pomocy strukturalnej UE, funduszy krajowych Narodowego Centrum Badań i Rozwoju, Narodowego Funduszu Ochrony Środowiska i Gospodarki Wodnej. Wspieramy Klientów we wszystkich etapach pozyskiwania dotacji, począwszy od rozpoznania potrzeb inwestycyjnych i napisania wniosku o dofinansowanie oraz dokumentacji aplikacyjnej, po rozliczenie poszczególnych etapów projektu, aż do formalnego zakończenia realizacji inwestycji
           p
             | Kluczem jest wybór odpowiedniego programu oraz konkursu. Invetta Sp. z o.o. rozpozna potrzeby inwestycyjne , zapewni monitoring źródeł dofinansowania, a na podstawie zebranych informacji, dobierze odpowiedni konkurs, w ramach którego będzie możliwość sfinansowania Państwa projekt. Pomożemy w rozpoznaniu i zdefiniowaniu potrzeb inwestycyjnych, określeniu koncepcji korzystania z dofinansowania, na potrzeby realizacji planów inwestycyjnych. Ponadto zapewnimy bieżące informowanie o harmonogramie naboru wniosków oraz konsultacje dotyczące planowanej inwestycji, których celem będzie przygotowanie informacji, niezbędnych do podjęcia decyzji o złożeniu wniosku o dofinansowanie.
           p
-            | Współpracujemy z zaufanymi partnerami posiadającymi niezbędne pozwolenia specjalizującymi się w opracowywaniu dokumentacji technicznych, raportów oddziaływania na środowisko i audytów energetycznych. Obszary w których wspieramy i doradzamy Jednostkom Samorządu Terytorialnego to m.in.:
+            | Współpracujemy z zaufanymi partnerami posiadającymi niezbędne pozwolenia specjalizującymi się w opracowywaniu dokumentacji technicznych, raportów oddziaływania na środowisko i audytów energetycznych. Obszary w których wspieramy i doradzamy jednostkom samorządu terytorialnego to m.in.:
             ul
               li Efektywność energetyczna
               li Odnawialne Źródła Energii
