point the contact form to Formspree endpoint

--- a/pug/partials/kontakt.pug
+++ b/pug/partials/kontakt.pug
@@ -6,8 +6,8 @@ a(name='kontakt')
       .col.s5.offset-s7.i-light.center-align.i-col-form
         h3 Napisz do nas
         h2 Formularz kontaktowy
-        form
-          input(type='text', placeholder='Twój e-mail')
-          input(type='text', placeholder='Temat wiadomości')
-          textarea(placeholder='Treść wiadomości', rows='4')
+        form(method='post', action='http://formspree.io/biuro@invetta.pl')
+          input(type='email', name='email', placeholder='Twój e-mail')
+          input(type='text', name='temat', placeholder='Temat wiadomości')
+          textarea(placeholder='Treść wiadomości', rows='4', name='wiadomość')
           button.i-btn(type='submit') Wyślij
