updates, texts for carousel

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,9 +4,8 @@ block top
   - var main = true
 
 block header
-  p Rozwój przez innowacje
   h1
-    | Proinnowacyjna integracja organizacji z sektorem badawczo-rozwojowym
+    | Rozwój przez innowacje
   a.i-btn(href='#oferta')
     | Poznaj ofertę
     img(src='images/icons/white-arrow-right.png')
@@ -38,7 +37,7 @@ block content
           h3 Co możemy zrobić dla Twojej firmy
   .i-content.i-dark.i-bg-shades
     .container
-      .row.i-content-space.valign-wrapper
+      .row.i-content-space
         .col.s6
           ul.i-topic-list#i-offer-slider-list
             li
@@ -51,19 +50,18 @@ block content
               span Dział technologiczny
             li
               span Dział finansowania i prowadzenia projektów
-        .col.s6.valign.center-align
+        .col.s6.center-align
           #i-offer-slider
             p
-              | Pomagamy wyznaczyć nowe kierunki rozwoju, zwiększać zyskowność oraz
-              | optymalizować procesy zachodzące wewnątrz firmy.
+              | Pomagamy wyznaczyć nowe kierunki rozwoju, zwiększać zyskowność oraz optymalizować procesy zachodzące wewnątrz firmy.
             p
-              | *** TODO: Osrodki badawczo-naukowe ***
+              | Stymulujemy innowacyjność ośrodków naukowych oraz umożliwiamy wykorzystanie w pełni potencjału intelektualnego ich pracowników.
             p
-              | *** TODO: Samorzady ***
+              | Invetta Sp. z o.o. pomaga jednostkom samorządu terytorialnego pozyskać wsparcie m.in. z programów krajowych oraz regionalnych, w ramach pomocy strukturalnej UE, funduszy krajowych Narodowego Centrum Badań i Rozwoju, Narodowego Funduszu Ochrony Środowiska i Gospodarki Wodnej.
             p
-              | *** TODO: Dzial technologiczny ***
+              | Nasz zespół jest w stanie zrealizować złożone projekty wymagające zaawansowanej wiedzy eksperckiej gwarantującej wysoki poziom realizacji.
             p
-              | *** TODO: Dzial finansowania i prowadzenia projektow ***
+              | Dysponujemy doświadczeniem zdobytym przy opracowywaniu oraz koordynacji ponad kilkuset projektów finansowanych ze środków UE oraz dotacji krajowych, których wartość plasuje się od kilku do kilkuset milionów złotych.
       .row.i-slider-dots-row
         .col.s12.center-align
           div(style='position: relative')
