request to formspree has to be sent using the same protocol

--- a/pug/partials/kontakt.pug
+++ b/pug/partials/kontakt.pug
@@ -6,7 +6,7 @@ a(name='kontakt')
       .col.s5.offset-s7.i-light.center-align.i-col-form
         h3 Napisz do nas
         h2 Formularz kontaktowy
-        form(method='post', action='http://formspree.io/biuro@invetta.pl')
+        form(method='post', action='//formspree.io/biuro@invetta.pl')
           input(type='email', name='email', placeholder='Twój e-mail')
           input(type='text', name='temat', placeholder='Temat wiadomości')
           textarea(placeholder='Treść wiadomości', rows='4', name='wiadomość')
